[package]
name = "aoc2020"
version = "0.1.0"
authors = ["makadaw <makadaw@gmail.com>"]
edition = "2018"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scan_fmt = "0.2"
pathfinding = "2.1.1"
itertools = "0.9.0"
rust-crypto = "0.2.36"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
